# pic

./: .gitignore  AGENTS.md  CONTEXT.md  apm.lock.yaml  apm.yml  wrangler.jsonc
.pi-git/: config.toml
backend/: package-lock.json  package.json  tsconfig.json  worker-configuration.d.ts  wrangler.jsonc
backend/migrations/: 0001_create_media_table.sql
backend/src/: db.ts  index.ts  types.ts
backend/src/routes/: media.ts
backend/tests/: api.test.ts
cli/: Cargo.toml
cli/src/: api.rs  config.rs  main.rs  media.rs  thumbnail.rs  upload.rs
docs/: PRD.md  cloudflare-setup.md
docs/adr/: 0001-direct-r2-upload-via-cli.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json
frontend/src/: main.tsx
frontend/src/api/: client.ts
frontend/src/components/: MediaCard.tsx
frontend/src/components/ui/: button.tsx  skeleton.tsx
frontend/src/pages/: Gallery.tsx  PhotoDetail.tsx
