[package]
name = "pic-cli"
version = "0.1.0"
edition = "2024"
description = "Pic CLI — Upload photos and videos to Cloudflare R2"
authors = ["Yoshiki Kudo"]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
rust-s3 = "0.37"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
image = "0.25"
libheif-rs = "2"
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
indicatif = "0.17"
toml = "0.8"
dirs = "5"
mime_guess = "2"
log = "0.4"
env_logger = "0.11"
kamadak-exif = "0.6"
